				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================
2010/06/27
	* Rev. 14356 Corrected a view ID and an equip location in the item database. (bugreport:4330) [L0ne_W0lf]
2010/06/21
	* Rev. 14352 Minor item database bug fixes! [L0ne_W0lf]
	- Corrected some lower headgears being able to be refined. (bugreport:4328) 
	- Fixed wrong view ids for crown of deceit and musical note headband. (bugreport:4328) 
2010/06/11
	* Rev. 14342 Added updated 13.2 drops to existing monsters. (Most rates are unknown, and set to 0.1%) [L0ne_W0lf]
	* And time to squish database bug reports!
	- Fixed guild event quest log entry time limit. (Bugreport:4204)
	- Fixed Musika healing while attacking and not when attacked. (Bugreport:4211)
	- Corrected the Int and HP/SP reduction on the Dead Tree Cane. (Bugreport:4217)
	- Fixed the non-set bonus for Glorious Ring's heal increase. (Bugreport:4223)
	- Fixed Death Guidance not casting NPC_HELLPOWER on the user. (Bugreport:4250)
	- Changed the usable job for Bone Plate from all to thief class. (Bugreport:4286)
	- Changed the bonus on alternate large bapho horns to subrace. (Bugreport:4291)
	- Added slots to blu and pink night caps, and a couple others. (Bugreport:4301)
	- Removed an extra comma from the Mini_Propeller_M headgear. (Bugreport:4307)
2010/06/11
	* Rev. 14340 Reduced Robo_Eye bonus from 3 -> 2 (bugreport:4288) [L0ne_W0lf]
	* Rev. 14339 Teehee, bugfixes! Some I made, some I missed. [L0ne_W0lf]
	* Fixed missing slot on Power_of_Thor. (bugreport:4168)
	* Fixed size for HELL_APOCALIPS and ZUKADAM. (bugreport:4293)
	* Fixed mob modes on ANCIENT_TREE and RYNCHO. (bugreport:4294)
	* Fixed HP and INT bonuses on the Kronos staff. (bugreport:4297)